fix: added overflow:hidden

--- a/src/_styles.scss
+++ b/src/_styles.scss
@@ -33,6 +33,7 @@
 
         .box-content {
             padding:1rem;
+            overflow:hidden;
         }
 
         .box-footer {
